# NitPicker

./: README.md
pipeline/: README.md  pyproject.toml
pipeline/src/pdf_pipeline/: __init__.py  cli.py  extractor.py  models.py  parser.py  pipeline.py  writers.py
pipeline/src/philnits_pdf_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pipeline/tmp-test-output/: pipeline_results.json  question_answer_mapping.json
pipeline/tmp-test-output-recursive/: pipeline_results.json  question_answer_mapping.json
src/: App.tsx
src/components/: footer.tsx
src/hooks/: useTheme.ts
src/pages/: homepage.tsx  mockexam.tsx  mockexamprep.tsx  mockexamresults.tsx
