[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "philnits-pdf-pipeline"
version = "0.1.0"
description = "PDF content pipeline for PhilNITS question and answer materials with image extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.24.0"
]

[project.scripts]
philnits-pipeline = "pdf_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
